--- a/style.css
+++ b/style.css
@@ -614,6 +614,8 @@ body{
 	margin: 0;
 	padding: 0;
 	height: 230px;
+	margin-top: 180px;
+	margin-bottom: -150px;
 }
 .schedule .schedule-inner {
 	position: relative;
